src/test/deca/context/invalid/SansObjet/DeclVar-floatString.deca
// Description:
//    Declaration of a float variable with initialization.
// 
// Results:
//     Incompatible type asignement error
// 
// Historique: 
//    cree le 11/01/2022 

{
    float x = "World" ;
}
